Added Google Analytics tracker

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -9,6 +9,9 @@ html(lang='en')
 			link(rel='stylesheet',href=locals.assets+'/flat-ui/css/bootstrap.css')
 			link(rel='stylesheet',href=locals.assets+'/flat-ui/css/flat-ui.css')
 			link(rel='stylesheet',href=locals.assets+'/theme.css')
+
+			include gaTracker
+
 	body
 		.wrap
 			.container
